--- a/index.html
+++ b/index.html
@@ -73,12 +73,94 @@
       </nav>
   </div>
 
+  <div class="caroussel">
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/redimention/gow1.jpg" class="d-block w-100" alt="gow">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/hogwarts1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/re41.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/tloy1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/zelda1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/hogwarts1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/re41.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <img src="img/redimention/gt1.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+      </div>
+      
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
       <div class="news container">
         <h1>Nos dernieres infos</h1>
       <div class="card mb-3">
         <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
         <div class="card-body">
-          <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h3>
+          <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule <span class="badge bg-secondary">New</span></h3>
           <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
           <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
         </div>
@@ -121,14 +203,15 @@
       </div>
       </div>
     </div>
-     
+
+  
 <div class="tips container mt-4">
   <h2>Nos dernières astuces</h2>
   <a href="page6.html" style="text-decoration:none; color: #000;">
 <div class="card mb-3">
   <img src="img/ree4.jpg" class="card-img-top" alt="re4">
   <div class="card-body">
-    <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</h3>
+    <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ? <span class="badge bg-secondary">New</span></h3>
     <p class="card-text">Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser. </p>
     <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
   </div>
@@ -172,6 +255,7 @@
 </div>
 <div>
 
+  
   <div class="page mt-4">
     <nav aria-label="Page navigation example ">
         <ul class="pagination justify-content-center">
