--- a/index.html
+++ b/index.html
@@ -89,57 +89,59 @@
         <div class="carousel-item active">
           <img src="img/redimention/gow1.jpg" class="d-block w-100" alt="gow">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h4>Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h4>
+            <p>Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/hogwarts1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h4>
+            <p>Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/re41.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h4>
+            <p>Découvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.
+            </p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/tloy1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h4>
+            <p>Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/zelda1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h4>
+            <p>Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/hogwarts1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !</h4>
+            <p>Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/re41.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>Second slide label</h4>
+            <p>Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</p>
           </div>
         </div>
         <div class="carousel-item ">
           <img src="img/redimention/gt1.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h4>Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h4>
+            <p>Some representative placeholder content for the second slide.Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.
+            </p>
           </div>
         </div>
       </div>
