--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-newsgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -83,7 +83,7 @@
         <h2> Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de
           défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</h2>
       </div>
-      <div class="col-12 col-md-6 imageZelda" alt="zelda"></div>
+      <div class="col-12 col-md-6 imageZelda" alt="zeldaTearsOfTheKingdom"></div>
     </div>
   </div>
   <div class="spart container">
@@ -93,31 +93,31 @@
         dans un monde enchanteur rempli de dangers et de mystères à résoudre. Dans cet article de blog, nous allons vous
         donner un aperçu de toutes les dernières actualités sur le jeu, pour vous donner une idée de ce qui vous attend
         dans cet univers fantastique.</p>
-      <h3>I. Un retour aux sources de la série</h3>
+      <h3>Un retour aux sources de la série</h3>
       <p> Legend of Zelda : Tears of the Kingdom est un retour aux sources pour la série, qui a été salué par les
         critiques pour son gameplay innovant et ses graphismes époustouflants. Le jeu suit les aventures de Link, un
         héros légendaire chargé de sauver le royaume d'Hyrule des griffes d'un mal ancien. Les joueurs doivent résoudre
         des énigmes complexes, combattre des ennemis redoutables et explorer un monde ouvert rempli de secrets et de
         surprises.</p>
-      <h3>II. Des graphismes à couper le souffle</h3>
+      <h3>Des graphismes à couper le souffle</h3>
       <p>Les graphismes de The Legend of Zelda : Tears of the Kingdom sont à couper le souffle, avec des paysages
         magnifiques qui vous donneront envie d'explorer chaque recoin du royaume d'Hyrule. Les personnages et les
         ennemis sont également très détaillés, et l'animation est fluide et réaliste. Le jeu est disponible sur une
         variété de plates-formes, y compris la Nintendo Switch et la Nintendo Switch Lite, ce qui signifie que les
         joueurs peuvent profiter de la beauté du jeu à tout moment et n'importe où.</p>
-      <h3>III. Un gameplay innovant</h3>
+      <h3>Un gameplay innovant</h3>
       <p>The Legend of Zelda : Tears of the Kingdom offre un gameplay innovant, avec des mécanismes de jeu qui
         récompensent l'exploration et la résolution d'énigmes. Les joueurs peuvent trouver des armes et des équipements
         spéciaux en explorant les donjons et les grottes cachées, et utiliser ces objets pour vaincre les ennemis et
         résoudre les puzzles. Les combats sont également passionnants et intenses, avec des ennemis qui exigent une
         stratégie et une tactique précises pour être vaincus.</p>
-      <h3>IV. Une bande-son épique</h3>
+      <h3>Une bande-son épique</h3>
       <p>La bande-son de The Legend of Zelda : Tears of the Kingdom est épique, avec des thèmes musicaux qui vous feront
         vibrer tout au long du jeu. Les chansons sont variées et adaptées à chaque situation, ce qui ajoute une couche
         supplémentaire d'immersion dans l'univers du jeu. Les fans de la série apprécieront les clins d'œil aux épisodes
         précédents de la série, tandis que les nouveaux joueurs seront immédiatement captivés par l'atmosphère
         envoûtante du jeu.</p>
-      <h3>V. Conclusion</h3>
+      <h3>Conclusion</h3>
       <p>En somme, The Legend² of Zelda : Tears of the Kingdom est un jeu incroyable qui promet d'être l'un des
         meilleurs de la série. Avec des graphismes à couper le souffle !</p>
     </div>
@@ -186,14 +186,17 @@
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
-                    <h3>Carieere</h3>
+                    <h3>Carrière</h3>
                     <ul>
                         <li><a href="#">Emplois</a></li>
                         <li><a href="#">Succes</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 item social">
-                  <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
+                  <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="instagram"></a><a
+                  href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png"
+                    class="social" alt="linkedin"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img
+                    src="img/discord.png" class="social" alt="discord"></a>
                   <p class="copyright">GUESDON Alexandra</p>
                 </div>
             </div>
