--- a/page9.html
+++ b/page9.html
@@ -19,101 +19,139 @@
 
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Jeux
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a></li>
-                </ul>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Actualités
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
-                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
-                  </ul>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Vidéos
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a></li>
-                    </ul>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Forum
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
-                      </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
-              <button class="btn btn-outline-light" type="submit">OK</button>
-            </form>
-          </div>
+      <div class="container-fluid">
+        <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
+            aria-current="page" href="#" alt="Newgames"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Jeux
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a>
+                </li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Actualités
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Vidéos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a>
+                </li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a>
+                </li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Forum
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">OK</button>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
   </div>
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
-      <h1>Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h1>
-      <h2>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</h2>
+        <h1>Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte
+          de la série</h1>
+        <h2>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des
+          générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement
+          utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</h2>
       </div>
-      <div class="col-12 col-md-6 imageRe" alt="Re"></div>
+      <div class="col-12 col-md-6 imageRe" alt="granTurismo"></div>
     </div>
-  </div>s
+  </div>
   <div class="spart container">
     <div class="article mt-4 ">
-      <p>Gran Turismo, le célèbre jeu de course automobile, est sorti en 1997 et est rapidement devenu un succès auprès des fans de jeux vidéo. Depuis lors, la série a connu de nombreuses suites, mais la première reste chère au cœur de nombreux joueurs. Récemment, un code secret a été découvert qui pourrait bien changer la donne pour ceux qui y jouent encore aujourd'hui.</p>
-<h3>La découverte</h3> 
-<p>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait. En effet, un joueur récent a découvert un code secret qui peut changer toute votre évolution dans le jeu, même 20 ans après sa sortie.</p>  
-<h3>Le code</h3> 
-<p>Le code en question est "2580". Si vous l'entrez comme nom de profil dans le jeu, vous débloquez immédiatement 4 000 000 crédits et toutes les voitures du jeu. Oui, vous avez bien lu. Toutes les voitures. Cela signifie que vous pouvez jouer avec n'importe quelle voiture dès le début du jeu, sans avoir à gagner des courses pour débloquer de nouveaux véhicules. Et les crédits vous permettront d'acheter toutes les mises à niveau nécessaires pour les rendre plus performantes.</p>
-<h3>Ruine l'expérience ?</h3>
-<p>Bien sûr, certains pourraient argumenter que cela ruine l'expérience du jeu. Mais pour ceux qui ont déjà joué au jeu pendant des heures et des heures, ce code secret pourrait donner un nouveau souffle de vie au jeu en leur permettant d'explorer toutes les possibilités de Gran Turismo sans avoir à passer par la lourde tâche de gagner des courses pour débloquer de nouvelles voitures.</p>
-<h3>Conclusion</h3>
-<p>En fin de compte, la découverte de ce code secret montre à quel point Gran Turismo est un jeu intemporel. Même 20 ans après sa sortie, il y a encore des secrets à découvrir et de nouvelles façons de jouer à ce jeu culte. Si vous êtes un fan de Gran Turismo, peut-être qu'il est temps de dépoussiérer votre vieille PlayStation et de donner une chance à ce code secret. Qui sait, cela pourrait changer complètement votre façon de jouer à ce jeu classique.</p>
-</div>
+      <p>Gran Turismo, le célèbre jeu de course automobile, est sorti en 1997 et est rapidement devenu un succès auprès
+        des fans de jeux vidéo. Depuis lors, la série a connu de nombreuses suites, mais la première reste chère au cœur
+        de nombreux joueurs. Récemment, un code secret a été découvert qui pourrait bien changer la donne pour ceux qui
+        y jouent encore aujourd'hui.</p>
+      <h3>La découverte</h3>
+      <p>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations
+        de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf
+        dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait. En effet, un joueur récent a
+        découvert un code secret qui peut changer toute votre évolution dans le jeu, même 20 ans après sa sortie.</p>
+      <h3>Le code</h3>
+      <p>Le code en question est "2580". Si vous l'entrez comme nom de profil dans le jeu, vous débloquez immédiatement
+        4 000 000 crédits et toutes les voitures du jeu. Oui, vous avez bien lu. Toutes les voitures. Cela signifie que
+        vous pouvez jouer avec n'importe quelle voiture dès le début du jeu, sans avoir à gagner des courses pour
+        débloquer de nouveaux véhicules. Et les crédits vous permettront d'acheter toutes les mises à niveau nécessaires
+        pour les rendre plus performantes.</p>
+      <h3>Ruine l'expérience ?</h3>
+      <p>Bien sûr, certains pourraient argumenter que cela ruine l'expérience du jeu. Mais pour ceux qui ont déjà joué
+        au jeu pendant des heures et des heures, ce code secret pourrait donner un nouveau souffle de vie au jeu en leur
+        permettant d'explorer toutes les possibilités de Gran Turismo sans avoir à passer par la lourde tâche de gagner
+        des courses pour débloquer de nouvelles voitures.</p>
+      <h3>Conclusion</h3>
+      <p>En fin de compte, la découverte de ce code secret montre à quel point Gran Turismo est un jeu intemporel. Même
+        20 ans après sa sortie, il y a encore des secrets à découvrir et de nouvelles façons de jouer à ce jeu culte. Si
+        vous êtes un fan de Gran Turismo, peut-être qu'il est temps de dépoussiérer votre vieille PlayStation et de
+        donner une chance à ce code secret. Qui sait, cela pourrait changer complètement votre façon de jouer à ce jeu
+        classique.</p>
+    </div>
   </div>
   <div class="container mt-4">
     <div class="row videorow mt-4">
       <div class="col-12 col-md-6">
-        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/1tBUsXIkG1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/1tBUsXIkG1A" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
       </div>
       <div class="see card col-12 col-md-6 vid ">
         <div class="card-header">
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li><a class="list-group-item" href="page6.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?
-          </a></li>
-          <li><a class="list-group-item" href="page7.html">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5
-          </a></li>
-          <li><a class="list-group-item" href="page8.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !
-          </a></li>
+          <li><a class="list-group-item" href="page6.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre
+              l'énigme du piédestal ?
+            </a></li>
+          <li><a class="list-group-item" href="page7.html">The Last of Us Part 1 : soluce complète sur PC d'un des
+              meilleurs jeux vidéo de la PS5
+            </a></li>
+          <li><a class="list-group-item" href="page8.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école
+              de Poudlard avant de commencer le jeu vidéo !
+            </a></li>
         </ul>
       </div>
     </div>
@@ -142,35 +180,39 @@
 
   <div class="footer-clean">
     <footer>
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-sm-4 col-md-3 item ">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Developement</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>A propos</h3>
-                    <ul>
-                        <li><a href="#">Equipe</a></li>
-                        <li><a href="#">Légal</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>Carieere</h3>
-                    <ul>
-                        <li><a href="#">Emplois</a></li>
-                        <li><a href="#">Succes</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 item social">
-                  <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
-                  <p class="copyright">GUESDON Alexandra</p>
-                </div>
-            </div>
+      <div class="container ">
+        <div class="row justify-content-center">
+          <div class="col-sm-4 col-md-3 item ">
+            <h3>Services</h3>
+            <ul>
+              <li><a href="#">Web design</a></li>
+              <li><a href="#">Developement</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>A propos</h3>
+            <ul>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Légal</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>Carrière</h3>
+            <ul>
+              <li><a href="#">Emplois</a></li>
+              <li><a href="#">Succes</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 item social">
+            <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="instagram"></a><a
+              href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png"
+                class="social" alt="linkedin"></a><a
+              href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social"
+                alt="discord"></a>
+            <p class="copyright">GUESDON Alexandra</p>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
