--- a/page3.html
+++ b/page3.html
@@ -19,93 +19,130 @@
 
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Jeux
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
-                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a></li>
-                </ul>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Actualités
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
-                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
-                  </ul>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Vidéos
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a></li>
-                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a></li>
-                    </ul>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Forum
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
-                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
-                      </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
-              <button class="btn btn-outline-light" type="submit">OK</button>
-            </form>
-          </div>
+      <div class="container-fluid">
+        <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
+            aria-current="page" href="#" alt="logo-newsgames"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Jeux
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a>
+                </li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Actualités
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Vidéos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a>
+                </li>
+                <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a>
+                </li>
+              </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Forum
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
+                <li><a class="dropdown-item "
+                    href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">OK</button>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
   </div>
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
-      <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h1>
-      <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+        <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et
+          plus encore !</h1>
+        <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une
+          expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
       </div>
-      <div class="col-12 col-md-6 imageHP" alt="HP"></div>
+      <div class="col-12 col-md-6 imageHP" alt="HogwartsLegacy"></div>
     </div>
   </div>s
   <div class="spart container">
     <div class="article mt-4 ">
-      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
-      <h3>I. Date de sortie</h3>
-      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
-      <h3>II.Gameplay</h3>
-      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les créatures magiques dangereuses.</p>
-        <h3>III.Personnages</h3>
-    <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.</p>
-      <h3>IV. Personnalisation</h3>
-      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts qu'il pourra lancer.</p>
-      <h3>V.Bande-son</h3>
-      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante de l'expérience de jeu. </p>
-<h3>VI.Conclusion</h3>
-<p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
+      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est
+        développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa
+        sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans
+        cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
+      <h3>Date de sortie</h3>
+      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la
+        conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera
+        disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
+      <h3>Gameplay</h3>
+      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de
+        Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre
+        maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite
+        et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les
+        créatures magiques dangereuses.</p>
+      <h3>Personnages</h3>
+      <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la
+        possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves
+        de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.
+      </p>
+      <h3>Personnalisation</h3>
+      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue
+        vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts
+        qu'il pourra lancer.</p>
+      <h3>Bande-son</h3>
+      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux
+        films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante
+        de l'expérience de jeu. </p>
+      <h3>Conclusion</h3>
+      <p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les
+        fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à
+        patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le
+        gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu
+        unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
     </div>
   </div>
   <div class="container mt-4">
     <div class="row videorow mt-4">
       <div class="col-12 col-md-6">
-        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
 
       </div>
       <div class="see card col-12 col-md-6 vid ">
@@ -113,9 +150,12 @@
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</a></li>
-            <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images ! </a></li>
-              <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
+          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique
+              vers le royaume d'Hyrule</a></li>
+          <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve
+              en images ! </a></li>
+          <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4
+              Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
         </ul>
       </div>
     </div>
@@ -144,35 +184,39 @@
 
   <div class="footer-clean">
     <footer>
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-sm-4 col-md-3 item ">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Developement</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>A propos</h3>
-                    <ul>
-                        <li><a href="#">Equipe</a></li>
-                        <li><a href="#">Légal</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>Carieere</h3>
-                    <ul>
-                        <li><a href="#">Emplois</a></li>
-                        <li><a href="#">Succes</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 item social">
-                  <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
-                  <p class="copyright">GUESDON Alexandra</p>
-                </div>
-            </div>
+      <div class="container ">
+        <div class="row justify-content-center">
+          <div class="col-sm-4 col-md-3 item ">
+            <h3>Services</h3>
+            <ul>
+              <li><a href="#">Web design</a></li>
+              <li><a href="#">Developement</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>A propos</h3>
+            <ul>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Légal</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>Carrière</h3>
+            <ul>
+              <li><a href="#">Emplois</a></li>
+              <li><a href="#">Succes</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 item social">
+            <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="instagram"></a><a
+              href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png"
+                class="social" alt="linkedin"></a><a
+              href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social"
+                alt="discord"></a>
+            <p class="copyright">GUESDON Alexandra</p>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
