--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+  <!--header-->
+
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -85,6 +88,8 @@
       </div>
     </nav>
   </div>
+
+  <!--caroussel-->
 
   <div class="caroussel">
     <div id="carouselExampleCaptions" class="carousel slide">
@@ -198,14 +203,17 @@
     </div>
   </div>
 
+  <!--news-->
+
   <div class="news container">
     <h1>Nos dernieres infos</h1>
     <div class="card mb-3">
-      <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top"
+      <a href="zelda.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top"
           alt="zeldaTearsOfTheKingdom">
         <div class="card-body">
           <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule
-            <span class="badge bg-secondary">New</span></h3>
+            <span class="badge bg-danger">New</span>
+          </h3>
           <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde
             magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
           <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
@@ -214,7 +222,7 @@
     </a>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <a href="page3.html" style="text-decoration:none; color: #000;">
+        <a href="hp1.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/hogwarts.jpg" class="card-img-bot" alt="HogwartsLegacy">
             <div class="card-body">
@@ -227,7 +235,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="page4.html" style="text-decoration:none; color: #000;">
+        <a href="diablo.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/gow.jpg" class="card-img-bot" alt="godOfWar">
             <div class="card-body">
@@ -241,7 +249,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="page5.html" style="text-decoration:none; color: #000;">
+        <a href="re1.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/re4.jpg" class="card-img-bot" alt="ResidentEvil4">
             <div class="card-body">
@@ -257,14 +265,17 @@
   </div>
   </div>
 
+  <!--tips-->
+
   <div class="tips container mt-4">
     <h2>Nos dernières astuces</h2>
-    <a href="page6.html" style="text-decoration:none; color: #000;">
+    <a href="re2.html" style="text-decoration:none; color: #000;">
       <div class="card mb-3">
         <img src="img/ree4.jpg" class="card-img-top" alt="ResidentEvil4">
         <div class="card-body">
           <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?
-            <span class="badge bg-secondary">New</span></h3>
+            <span class="badge bg-danger">New</span>
+          </h3>
           <p class="card-text">Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué
             qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans
             cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser.
@@ -275,7 +286,7 @@
     </a>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <a href="page7.html" style="text-decoration:none; color: #000;">
+        <a href="lastofus.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/tloy.jpg" class="card-img-bot" alt="TheLastOfUs">
             <div class="card-body">
@@ -290,7 +301,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="page8.html" style="text-decoration:none; color: #000;">
+        <a href="hp2.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/hogwarts.jpg" class="card-img-bot" alt="HogwartsLegacy">
             <div class="card-body">
@@ -304,7 +315,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="page9.html" style="text-decoration:none; color: #000;">
+        <a href="gt.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/gt.png" class="card-img-bot" alt="GranTurismo">
             <div class="card-body">
@@ -322,25 +333,29 @@
   </div>
   <div>
 
+    <!--pages-->
+
     <div class="page mt-4">
       <nav aria-label="Page navigation example ">
         <ul class="pagination justify-content-center">
           <li class="page-item">
-            <a class="page-link" href="page9.html" aria-label="Previous">
+            <a class="page-link" href="gt.html" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
             </a>
           </li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="page2.html">2</a></li>
-          <li class="page-item"><a class="page-link" href="page3.html">3</a></li>
+          <li class="page-item"><a class="page-link" href="zelda.html">2</a></li>
+          <li class="page-item"><a class="page-link" href="hp1.html">3</a></li>
           <li class="page-item">
-            <a class="page-link" href="page2.html" aria-label="Next">
+            <a class="page-link" href="zelda.html" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
             </a>
           </li>
         </ul>
       </nav>
     </div>
+
+    <!--footers-->
 
     <div class="footer-clean">
       <footer>
@@ -370,8 +385,9 @@
             <div class="col-lg-3 item social">
               <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="instagram"></a><a
                 href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png"
-                  class="social" alt="linkedin"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img
-                  src="img/discord.png" class="social" alt="discord"></a>
+                  class="social" alt="linkedin"></a><a
+                href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png"
+                  class="social" alt="discord"></a>
               <p class="copyright">GUESDON Alexandra</p>
             </div>
           </div>
@@ -382,4 +398,5 @@
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
