--- a/gt.html
+++ b/gt.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/gt.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
-            aria-current="page" href="#" alt="logo-criticgames"> </a>
+            aria-current="page" href="#" alt="Newgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -91,38 +91,108 @@
     </nav>
   </div>
 
-  <!--forms--> 
+  <!--article-->
 
   <div class="container">
-    <h3>Forms de contact</h3>
-    <div class="">
-      <form action="/action_page.php">
-        <label for="fname">Nom</label>
-        <input type="text" id="fname" name="firstname" placeholder="Votre nom...">
-
-        <label for="lname">Prénom</label>
-        <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
-
-        <label for="country">Pays</label>
-        <select id="country" name="country">
-          <option value="australia">France</option>
-          <option value="canada">Canada</option>
-          <option value="usa">Belgique</option>
-        </select>
-
-        <label for="subject">Sujet</label>
-        <textarea id="subject" name="subject" placeholder="Ecrivez quelque chose..." style="height:200px"></textarea>
-
-        <input class="btn" type="submit" value="Envoyer">
-      </form>
+    <div class="row maRow">
+      <div class="col-12 col-md-6">
+        <h1>Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte
+          de la série</h1>
+        <h2>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des
+          générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement
+          utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</h2>
+      </div>
+      <div class="col-12 col-md-6 imageRe" alt="granTurismo"></div>
+    </div>
+  </div>
+  <div class="spart container">
+    <div class="article mt-4 ">
+      <p>Gran Turismo, le célèbre jeu de course automobile, est sorti en 1997 et est rapidement devenu un succès auprès
+        des fans de jeux vidéo. Depuis lors, la série a connu de nombreuses suites, mais la première reste chère au cœur
+        de nombreux joueurs. Récemment, un code secret a été découvert qui pourrait bien changer la donne pour ceux qui
+        y jouent encore aujourd'hui.</p>
+      <h3>La découverte</h3>
+      <p>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations
+        de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf
+        dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait. En effet, un joueur récent a
+        découvert un code secret qui peut changer toute votre évolution dans le jeu, même 20 ans après sa sortie.</p>
+      <h3>Le code</h3>
+      <p>Le code en question est "2580". Si vous l'entrez comme nom de profil dans le jeu, vous débloquez immédiatement
+        4 000 000 crédits et toutes les voitures du jeu. Oui, vous avez bien lu. Toutes les voitures. Cela signifie que
+        vous pouvez jouer avec n'importe quelle voiture dès le début du jeu, sans avoir à gagner des courses pour
+        débloquer de nouveaux véhicules. Et les crédits vous permettront d'acheter toutes les mises à niveau nécessaires
+        pour les rendre plus performantes.</p>
+      <h3>Ruine l'expérience ?</h3>
+      <p>Bien sûr, certains pourraient argumenter que cela ruine l'expérience du jeu. Mais pour ceux qui ont déjà joué
+        au jeu pendant des heures et des heures, ce code secret pourrait donner un nouveau souffle de vie au jeu en leur
+        permettant d'explorer toutes les possibilités de Gran Turismo sans avoir à passer par la lourde tâche de gagner
+        des courses pour débloquer de nouvelles voitures.</p>
+      <h3>Conclusion</h3>
+      <p>En fin de compte, la découverte de ce code secret montre à quel point Gran Turismo est un jeu intemporel. Même
+        20 ans après sa sortie, il y a encore des secrets à découvrir et de nouvelles façons de jouer à ce jeu culte. Si
+        vous êtes un fan de Gran Turismo, peut-être qu'il est temps de dépoussiérer votre vieille PlayStation et de
+        donner une chance à ce code secret. Qui sait, cela pourrait changer complètement votre façon de jouer à ce jeu
+        classique.</p>
     </div>
   </div>
 
+  <!--other-->
+
+  <div class="container mt-4">
+    <div class="row videorow mt-4">
+      <div class="col-12 col-md-6">
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/1tBUsXIkG1A" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="see card col-12 col-md-6 vid ">
+        <div class="card-header">
+          A voir aussi
+        </div>
+        <ul class="list-group list-group-flush">
+          <li><a class="list-group-item" href="re2.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre
+              l'énigme du piédestal ?
+            </a></li>
+          <li><a class="list-group-item" href="lastofus.html">The Last of Us Part 1 : soluce complète sur PC d'un des
+              meilleurs jeux vidéo de la PS5
+            </a></li>
+          <li><a class="list-group-item" href="h">Hogwarts Legacy : tout ce que vous devez savoir sur l’école
+              de Poudlard avant de commencer le jeu vidéo !
+            </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!--pages-->
+
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="hp2.html" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="zelda.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="hp1.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="index.html" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <!--footer-->
-  
-  <footer>
-    <div class="footer-clean">
-      <div class="container foot">
+
+  <div class="footer-clean">
+    <footer>
+      <div class="container ">
         <div class="row justify-content-center">
           <div class="col-sm-4 col-md-3 item ">
             <h3>Services</h3>
@@ -155,12 +225,11 @@
           </div>
         </div>
       </div>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
