--- a/hp1.html
+++ b/hp1.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/hp1.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
-            aria-current="page" href="#" alt="logo-criticgames"> </a>
+            aria-current="page" href="#" alt="logo-newsgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -91,38 +91,111 @@
     </nav>
   </div>
 
-  <!--forms--> 
+  <!--article-->
 
   <div class="container">
-    <h3>Forms de contact</h3>
-    <div class="">
-      <form action="/action_page.php">
-        <label for="fname">Nom</label>
-        <input type="text" id="fname" name="firstname" placeholder="Votre nom...">
-
-        <label for="lname">Prénom</label>
-        <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
-
-        <label for="country">Pays</label>
-        <select id="country" name="country">
-          <option value="australia">France</option>
-          <option value="canada">Canada</option>
-          <option value="usa">Belgique</option>
-        </select>
-
-        <label for="subject">Sujet</label>
-        <textarea id="subject" name="subject" placeholder="Ecrivez quelque chose..." style="height:200px"></textarea>
-
-        <input class="btn" type="submit" value="Envoyer">
-      </form>
+    <div class="row maRow">
+      <div class="col-12 col-md-6">
+        <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et
+          plus encore !</h1>
+        <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une
+          expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+      </div>
+      <div class="col-12 col-md-6 imageHP" alt="HogwartsLegacy"></div>
     </div>
+  </div>s
+  <div class="spart container">
+    <div class="article mt-4 ">
+      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est
+        développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa
+        sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans
+        cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
+      <h3>Date de sortie</h3>
+      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la
+        conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera
+        disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
+      <h3>Gameplay</h3>
+      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de
+        Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre
+        maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite
+        et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les
+        créatures magiques dangereuses.</p>
+      <h3>Personnages</h3>
+      <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la
+        possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves
+        de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.
+      </p>
+      <h3>Personnalisation</h3>
+      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue
+        vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts
+        qu'il pourra lancer.</p>
+      <h3>Bande-son</h3>
+      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux
+        films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante
+        de l'expérience de jeu. </p>
+      <h3>Conclusion</h3>
+      <p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les
+        fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à
+        patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le
+        gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu
+        unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
+    </div>
+  </div>
+  <div class="container mt-4">
+    <div class="row videorow mt-4">
+      <div class="col-12 col-md-6">
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+      <!--other-->
+
+      <div class="see card col-12 col-md-6 vid ">
+        <div class="card-header">
+          A voir aussi
+        </div>
+        <ul class="list-group list-group-flush">
+          <li><a class="list-group-item" href="zelda.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique
+              vers le royaume d'Hyrule</a></li>
+          <li><a class="list-group-item" href="diablo.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve
+              en images ! </a></li>
+          <li><a class="list-group-item" href="re1.html">« La lunette du sniper est inutilisable » Resident Evil 4
+              Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!--pages-->
+
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="zelda.html" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="zelda.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="hp1.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="diablo.html" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 
   <!--footer-->
-  
-  <footer>
-    <div class="footer-clean">
-      <div class="container foot">
+
+  <div class="footer-clean">
+    <footer>
+      <div class="container ">
         <div class="row justify-content-center">
           <div class="col-sm-4 col-md-3 item ">
             <h3>Services</h3>
@@ -155,12 +228,11 @@
           </div>
         </div>
       </div>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
