--- a/lastofus.html
+++ b/lastofus.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/lastofus.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
-            aria-current="page" href="#" alt="logo-criticgames"> </a>
+            aria-current="page" href="#" alt="logo-newsgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -91,38 +91,110 @@
     </nav>
   </div>
 
-  <!--forms--> 
+  <!--article-->
 
   <div class="container">
-    <h3>Forms de contact</h3>
-    <div class="">
-      <form action="/action_page.php">
-        <label for="fname">Nom</label>
-        <input type="text" id="fname" name="firstname" placeholder="Votre nom...">
-
-        <label for="lname">Prénom</label>
-        <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
-
-        <label for="country">Pays</label>
-        <select id="country" name="country">
-          <option value="australia">France</option>
-          <option value="canada">Canada</option>
-          <option value="usa">Belgique</option>
-        </select>
-
-        <label for="subject">Sujet</label>
-        <textarea id="subject" name="subject" placeholder="Ecrivez quelque chose..." style="height:200px"></textarea>
-
-        <input class="btn" type="submit" value="Envoyer">
-      </form>
+    <div class="row maRow">
+      <div class="col-12 col-md-6">
+        <h1>The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h1>
+        <h2>Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel
+          avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une
+          soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre
+          phare de Naughty Dog.</h2>
+      </div>
+      <div class="col-12 col-md-6 imageRe" alt="theLastOfUs"></div>
+    </div>
+  </div>s
+  <div class="spart container">
+    <div class="article mt-4 ">
+      <p>The Last of Us Part 1 est un jeu vidéo d'action-aventure développé par Naughty Dog et édité par Sony Computer
+        Entertainment. Il a été initialement publié en 2013 pour la PlayStation 3 et a depuis été remastérisé pour la
+        PlayStation 4 et la PlayStation 5. Ce jeu est considéré comme l'un des meilleurs jeux de la PS5 et de tous les
+        temps. Dans cet article, nous vous fournirons une soluce complète pour The Last of Us Part 1 sur PC.</p>
+      <h3>Les Bases du Jeu</h3>
+      <p>La première partie de notre soluce expliquera les bases du jeu. Nous vous donnerons des conseils pour bien
+        commencer votre aventure dans The Last of Us Part 1. Vous apprendrez comment contrôler les personnages, comment
+        naviguer dans les niveaux et comment interagir avec l'environnement. Nous vous donnerons également des astuces
+        pour économiser vos ressources et améliorer vos armes.</p>
+      <h3>Le Guide des Niveaux</h3>
+      <p>Dans cette partie de notre soluce, nous vous guiderons à travers chaque niveau du jeu. Nous vous donnerons des
+        conseils pour naviguer dans les niveaux, éviter les ennemis et trouver des cachettes. Nous vous montrerons
+        également où trouver des armes et des munitions pour vous aider à vaincre les ennemis.</p>
+      <h3>Les Ennemis et les Boss</h3>
+      <p>Dans cette partie, nous vous donnerons des conseils pour vaincre les ennemis et les boss. Nous vous montrerons
+        comment éviter leurs attaques et comment utiliser vos armes pour les vaincre. Nous vous donnerons également des
+        astuces pour économiser vos ressources et améliorer vos armes pour rendre les combats plus faciles.</p>
+      <h3>Les Objets à Collectionner</h3>
+      <p>The Last of Us Part 1 regorge d'objets à collectionner, tels que des journaux, des magazines et des artefacts.
+        Dans cette partie de notre soluce, nous vous montrerons où trouver tous ces objets à collectionner. Nous vous
+        donnerons également des informations sur l'histoire et le monde du jeu que vous découvrirez en les trouvant.</p>
+      <h3>La Fin du Jeu</h3>
+      <p>Dans cette partie, nous vous guiderons à travers la fin du jeu. Nous vous donnerons des conseils pour vaincre
+        les ennemis et le boss final. Nous vous montrerons également comment terminer le jeu avec succès en obtenant
+        tous les trophées et en débloquant toutes les réalisations.</p>
+      <h3>Conclusion</h3>
+      <p>Dans cette soluce complète pour The Last of Us Part 1 sur PC, nous vous avons guidé à travers chaque aspect du
+        jeu. Nous espérons que cette soluce vous aidera à apprécier ce jeu incroyable et à le terminer avec succès.
+        N'oubliez pas de profiter de chaque instant de cette expérience de jeu immersive et passionnante.</p>
     </div>
   </div>
 
+  <!--other-->
+
+  <div class="container mt-4">
+    <div class="row videorow mt-4">
+      <div class="col-12 col-md-6">
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/_6v_D3QocIs" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="see card col-12 col-md-6 vid ">
+        <div class="card-header">
+          A voir aussi
+        </div>
+        <ul class="list-group list-group-flush">
+          <li><a class="list-group-item" href="re2.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre
+              l'énigme du piédestal ? </a></li>
+          <li><a class="list-group-item" href="hp2.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école
+              de Poudlard avant de commencer le jeu vidéo !
+            </a> </li>
+          <li><a class="list-group-item" href="gt.html">Gran Turismo : 20 ans plus tard, on découvre un code qui
+              change toute votre évolution dans cet épisode culte de la série
+            </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!--pages-->
+
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="re2.html" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="zelda.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="hp1.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="hp2.html" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <!--footer-->
-  
-  <footer>
-    <div class="footer-clean">
-      <div class="container foot">
+
+  <div class="footer-clean">
+    <footer>
+      <div class="container ">
         <div class="row justify-content-center">
           <div class="col-sm-4 col-md-3 item ">
             <h3>Services</h3>
@@ -155,12 +227,11 @@
           </div>
         </div>
       </div>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
