--- a/re1.html
+++ b/re1.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/re1.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
-            aria-current="page" href="#" alt="logo-criticgames"> </a>
+            aria-current="page" href="#" alt="logo-newsgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -91,38 +91,112 @@
     </nav>
   </div>
 
-  <!--forms--> 
+  <!--article-->
 
   <div class="container">
-    <h3>Forms de contact</h3>
-    <div class="">
-      <form action="/action_page.php">
-        <label for="fname">Nom</label>
-        <input type="text" id="fname" name="firstname" placeholder="Votre nom...">
-
-        <label for="lname">Prénom</label>
-        <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
-
-        <label for="country">Pays</label>
-        <select id="country" name="country">
-          <option value="australia">France</option>
-          <option value="canada">Canada</option>
-          <option value="usa">Belgique</option>
-        </select>
-
-        <label for="subject">Sujet</label>
-        <textarea id="subject" name="subject" placeholder="Ecrivez quelque chose..." style="height:200px"></textarea>
-
-        <input class="btn" type="submit" value="Envoyer">
-      </form>
+    <div class="row maRow">
+      <div class="col-12 col-md-6">
+        <h1>« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un
+          hasard !</h1>
+        <h2>Découvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très
+          attendu, qui promet de redonner vie à l'un des classiques de Capcom.</h2>
+      </div>
+      <div class="col-12 col-md-6 imageRe" alt="residentEvil4"></div>
+    </div>
+  </div>s
+  <div class="spart container">
+    <div class="article mt-4 ">
+      <p>Resident Evil 4 est l'un des jeux les plus célèbres de la franchise de jeux vidéo Resident Evil, développée par
+        Capcom. Sorti en 2005, le jeu a marqué les esprits des joueurs avec son gameplay innovant et son histoire
+        captivante. Capcom a annoncé en 2021 qu'un remake de Resident Evil 4 est en préparation pour les consoles de
+        nouvelle génération. Dans cet article, nous vous donnons toutes les dernières actualités sur Resident Evil 4
+        Remake.</p>
+      <h3>Date de sortie</h3>
+      <p>La date de sortie de Resident Evil 4 Remake n'a pas encore été annoncée officiellement, mais il est prévu que
+        le jeu soit disponible pour PlayStation 5, Xbox Series X/S et PC. Les fans attendent avec impatience la sortie
+        de ce jeu très attendu.</p>
+      <h3>Gameplay</h3>
+      <p>Resident Evil 4 Remake promet une expérience de jeu passionnante, avec un gameplay amélioré pour les consoles
+        de nouvelle génération. Le joueur incarne Leon S. Kennedy, un agent spécial envoyé en mission pour sauver la
+        fille du président des États-Unis, kidnappée par une secte mystérieuse. Le joueur doit naviguer à travers une
+        série de défis, y compris la gestion des ressources et la lutte contre les ennemis, pour atteindre son objectif
+        final.</p>
+      <h3>Graphismes</h3>
+      <p>Les graphismes de Resident Evil 4 Remake sont une amélioration significative par rapport à l'original. Les
+        environnements sont plus détaillés et les personnages sont plus réalistes. Les cinématiques ont également été
+        améliorées pour une expérience de jeu plus immersive.</p>
+      <h3>La lunette du sniper</h3>
+      <p>Une des critiques les plus communes pour la version PS4 de Resident Evil 4 Remake est que la lunette du sniper
+        est inutilisable. Les joueurs ont rapporté que la lunette tremble constamment et qu'il est difficile de viser
+        correctement. Cela a suscité des inquiétudes quant à la qualité générale du jeu, mais Capcom a assuré aux fans
+        que le problème sera résolu avant la sortie officielle du jeu.</p>
+      <h3>Réponse des fans</h3>
+      <p>Les fans ont eu une réponse mitigée à l'annonce de Resident Evil 4 Remake. Certains étaient excités de voir une
+        version mise à jour de leur jeu préféré, tandis que d'autres ont exprimé leur inquiétude quant à la qualité du
+        remake. Cependant, Capcom a réaffirmé son engagement à fournir une expérience de jeu de qualité supérieure.</p>
+      <h3>Conclusion</h3>
+      <p> En conclusion, Resident Evil 4 Remake est un jeu très attendu qui promet une expérience de jeu passionnante
+        pour les fans de la franchise Resident Evil. Avec un gameplay amélioré, des graphismes améliorés et une histoire
+        captivante, ce jeu est certainement un must-play pour les fans de jeux d'action et de survie. Bien que la
+        critique de la lunette du sniper pour la version PS4 soit préoccupante, les fans peuvent être assurés que Capcom
+        travaille dur !</p>
     </div>
   </div>
 
+  <!--other-->
+
+  <div class="container mt-4">
+    <div class="row videorow mt-4">
+      <div class="col-12 col-md-6">
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/E69tKrfEQag" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="see card col-12 col-md-6 vid ">
+        <div class="card-header">
+          A voir aussi
+        </div>
+        <ul class="list-group list-group-flush">
+          <li><a class="list-group-item" href="zelda.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique
+              vers le royaume d'Hyrule</a></li>
+          <li><a class="list-group-item" href="hp1.html">Tout ce que vous devez savoir sur l'actualité de Hogwarts
+              Legacy : date de sortie, gameplay, personnages et plus encore !</a></li>
+          <li><a class="list-group-item" href="diablo.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve
+              en images ! </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!--pages-->
+
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="diablo.html" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="zelda.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="hp1.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="re2.html" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <!--footer-->
-  
-  <footer>
-    <div class="footer-clean">
-      <div class="container foot">
+
+  <div class="footer-clean">
+    <footer>
+      <div class="container ">
         <div class="row justify-content-center">
           <div class="col-sm-4 col-md-3 item ">
             <h3>Services</h3>
@@ -155,12 +229,11 @@
           </div>
         </div>
       </div>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
